# dflow-galaxy

./: .gitignore  =  CHANGELOG.md  Dockerfile  README.md  addlicenseheader.py  build-docker.sh  dgcli  pyproject.toml
dflow_galaxy/app/: common.py
dflow_galaxy/app/cp2k_lightning/: dflow.py  main.py
dflow_galaxy/app/dynacat_md/: dflow.py  main.py
dflow_galaxy/app/dynacat_tesla/: main.py
dflow_galaxy/core/: dflow.py  dflow_builder.py  dispatcher.py  lib.py  types.py  util.py
dflow_galaxy/workflow/reweighting/: domain.py  main.py
dflow_galaxy/workflow/tesla/: config.py  domain.py  lib.py  main.py
dflow_galaxy/workflow/tesla/domain/: cp2k.py  deepmd.py  lammps.py  lib.py  model_devi.py
doc/: dev-note.zh.md  tesla.md
doc/bohrium_app/: cp2k_lightning.md  dynacat_md.md  dynacat_tesla.md  tesla_lightning.md
examples/: README.md  square_sum.py
launch_app/: README.md  cp2k_lightning.py  dynacat_md.py  dynacat_tesla.py
notebook/dynacat/: POSCAR  dynacat-101.ipynb
tests/: dflow.py  lib.py  misc.py  tesla.py  util.py
