[tool.poetry]
name = "dflow-galaxy"
version = "0.1.2"
description = ""
authors = ["weihong.xu <xuweihong.cn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydflow = "^1.8.51"
dpdispatcher = "^0.6.4"
ai2-kit= "0.14.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dgcli = "dflow_galaxy.main:main"